--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-
-<h2>Hello World </h2>
-<div>
-    <img src="hgd.jpg" height="200">
-</div>
-
+<body id='canvas' bgcolor="Blue Gray">
+    <h2>Hello World </h2>
+    <div>
+        <img src="hgd.jpg" height="400">
+    </div>
+</body>
 </html>
 
