--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body id='canvas' bgcolor="Blue Gray">
+<body id='canvas' bgcolor="#6698FF">
     <h2>Hello World </h2>
     <div>
         <img src="hgd.jpg" height="400">
