--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
+    <style>
+        h2 {text-align: center;}
+    </style>
 <body id='canvas' bgcolor="#6698FF">
-    <h2>Hello World </h2>
+    <h2>Hello World</h2>
     <div>
-        <img src="hgd.jpg" height="400">
+        <center><img src="hgd.jpg" height="600">
+        </center>
     </div>
 </body>
 </html>
